maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:10: error: reassignment to val
    etat = 1;
         ^IslandMaze:21: error: reassignment to val
    etat = 0;
         ^IslandMaze:35: error: missing parameter type
      case_ => println("Ce cas ne devrait pas arriver. Corrigez le problème SVP. ");
      ^